--- a/src/Makefile_Evas.am
+++ b/src/Makefile_Evas.am
@@ -373,7 +373,8 @@ lib/evas/filters/evas_filter_bump.c \
 lib/evas/filters/evas_filter_curve.c \
 lib/evas/filters/evas_filter_displace.c \
 lib/evas/filters/evas_filter_mask.c \
-lib/evas/filters/evas_filter_parser.c
+lib/evas/filters/evas_filter_parser.c \
+lib/evas/filters/evas_filter_utils.c
 
 
 ### Engines
