--- a/src/Makefile_Ecore_Drm.am
+++ b/src/Makefile_Ecore_Drm.am
@@ -9,6 +9,7 @@ dist_installed_ecoredrmmainheaders_DATA = \
   lib/ecore_drm/Ecore_Drm.h
 
 lib_ecore_drm_libecore_drm_la_SOURCES = \
+lib/ecore_drm/ecore_drm_sprites.c \
 lib/ecore_drm/ecore_drm_fb.c \
 lib/ecore_drm/ecore_drm_evdev.c \
 lib/ecore_drm/ecore_drm_inputs.c \
