Remove libinput dependency
Signed-off-by: Chris Michael <cp.michael@samsung.com>

--- a/configure.ac
+++ b/configure.ac
@@ -2506,7 +2506,7 @@ EFL_INTERNAL_DEPEND_PKG([ECORE_DRM], [ecore-input])
 EFL_INTERNAL_DEPEND_PKG([ECORE_DRM], [eo])
 EFL_INTERNAL_DEPEND_PKG([ECORE_DRM], [eina])
 
-EFL_DEPEND_PKG([ECORE_DRM], [DRM], [libudev >= 148 libdrm >= 2.4 libinput >= 0.0.90])
+EFL_DEPEND_PKG([ECORE_DRM], [DRM], [libudev >= 148 libdrm >= 2.4])
 EFL_OPTIONAL_DEPEND_PKG([ECORE_DRM], [${want_drm_hw_accel}], [GBM], [gbm])
 
 EFL_EVAL_PKGS([ECORE_DRM])
