Evas filters: Add transform filter
This is the simplest solution I can come up with for "mirror" effects.
Displacement maps are HARD to generate and use properly, since the buffer
size is unknown until runtime.
Even if we align the map to the text itself (using the padding information),
it's still hard to describe properly how to apply the displacement map, and
to generate it... So let's just add a simple flip operation.

--- a/src/Makefile_Evas.am
+++ b/src/Makefile_Evas.am
@@ -374,6 +374,7 @@ lib/evas/filters/evas_filter_curve.c \
 lib/evas/filters/evas_filter_displace.c \
 lib/evas/filters/evas_filter_mask.c \
 lib/evas/filters/evas_filter_parser.c \
+lib/evas/filters/evas_filter_transform.c \
 lib/evas/filters/evas_filter_utils.c
 
 
