--- a/configure.ac
+++ b/configure.ac
@@ -2079,7 +2079,7 @@ AM_CONDITIONAL([HAVE_CARES], [test "x${have_cares}" = "xyes"])
 
 if test "x$have_cares" = "xyes" ; then
    ecore_con_resolver="cares"
-elif test -n "$ac_cv_prog_cc_c99" ; then
+elif test "x$ac_cv_prog_cc_c99" != "xno" ; then
    ecore_con_resolver="dns.c"
 else
    ecore_con_resolver="fork"
