Add evas engine files (for drm) to build order
Signed-off-by: Chris Michael <cp.michael@samsung.com>

--- a/src/Makefile_Evas.am
+++ b/src/Makefile_Evas.am
@@ -961,9 +961,10 @@ endif
 if BUILD_ENGINE_DRM
 dist_installed_evasmainheaders_DATA += modules/evas/engines/drm/Evas_Engine_Drm.h
 DRM_SOURCES = \
-modules/evas/engines/drm/evas_outbuf.c \
 modules/evas/engines/drm/evas_engine.c \
-modules/evas/engines/drm/evas_engine.h
+modules/evas/engines/drm/evas_engine.h \
+modules/evas/engines/drm/evas_swapbuf.c \
+modules/evas/engines/drm/evas_swapper.c
 if EVAS_STATIC_BUILD_DRM
 lib_evas_libevas_la_SOURCES += $(DRM_SOURCES)
 lib_evas_libevas_la_CPPFLAGS += @evas_engine_drm_cflags@
