evas - fonts - move to using 4bit and rel 4 bit compressed font glyphs
this changes the internal encoding of font glyphs in evas to use 4bit
uncompressed if small, or 4bit rle (run length encoded) if larger.
this caves at least 50% of memory on fonts - and more if bigger. with
large fonts (40-80pixel size) we can save in the region of 80% of
memory used for glyphs. this also happesn to allow speedups in
rendering too.

--- a/src/Makefile_Evas.am
+++ b/src/Makefile_Evas.am
@@ -146,6 +146,7 @@ lib/evas/common/evas_font_draw.c \
 lib/evas/common/evas_font_load.c \
 lib/evas/common/evas_font_main.c \
 lib/evas/common/evas_font_query.c \
+lib/evas/common/evas_font_compress.c \
 lib/evas/common/evas_image_load.c \
 lib/evas/common/evas_image_save.c \
 lib/evas/common/evas_image_main.c \
@@ -250,6 +251,7 @@ static_libs/libunibreak/ChangeLog
 # Engines
 
 EXTRA_DIST += \
+lib/evas/common/evas_font_compress_draw.c \
 lib/evas/common/evas_map_image_internal.c \
 lib/evas/common/evas_map_image_core.c \
 lib/evas/common/evas_map_image_loop.c \
