configure: Add ecore-imf to ETHUMB_INTERNAL_LIBS
It is to fix possible build break of ethumb

I got below message.
lib/edje/.libs/libedje.so: undefined reference to `ecore_imf_context_retrieve_selection_callback_set'
collect2: error: ld returned 1 exit status
make[4]: *** [bin/ethumb/ethumb] Error 1

--- a/configure.ac
+++ b/configure.ac
@@ -3790,6 +3790,7 @@ EFL_INTERNAL_DEPEND_PKG([ETHUMB], [eo])
 EFL_INTERNAL_DEPEND_PKG([ETHUMB], [ecore])
 EFL_INTERNAL_DEPEND_PKG([ETHUMB], [ecore-evas])
 EFL_INTERNAL_DEPEND_PKG([ETHUMB], [ecore-file])
+EFL_INTERNAL_DEPEND_PKG([ETHUMB], [ecore-imf])
 EFL_INTERNAL_DEPEND_PKG([ETHUMB], [edje])
 
 ## modules
