--- a/src/Makefile_Evas.am
+++ b/src/Makefile_Evas.am
@@ -964,7 +964,8 @@ DRM_SOURCES = \
 modules/evas/engines/drm/evas_engine.c \
 modules/evas/engines/drm/evas_engine.h \
 modules/evas/engines/drm/evas_swapbuf.c \
-modules/evas/engines/drm/evas_swapper.c
+modules/evas/engines/drm/evas_swapper.c \
+modules/evas/engines/drm/evas_buffer_manager.c
 if EVAS_STATIC_BUILD_DRM
 lib_evas_libevas_la_SOURCES += $(DRM_SOURCES)
 lib_evas_libevas_la_CPPFLAGS += @evas_engine_drm_cflags@
